# screenrecorder

./: .travis.yml  CMakeLists.txt  ScreenRecorder.cpp  ScreenRecorder.h  main.cpp
